feat: JDBC ops run persistence, SOP/skill tooling, and marketplace trade alignment
- Persist OpsRunSummary via JDBC with schema scripts and persistence config; refactor run history service.
- Add per-skill tool documentation classes; extend registries and MySQL toolkit; enrich SOP YAML rules.
- Update ops-agent frontend runs workbench, docs, and agent rules.
- Align group-buy, order, and seckill services with trade/MQ flows; extend order refund/close producers and dev-ops API/MQ documentation.

Co-authored-by: Cursor <cursoragent@cursor.com>